fix issue with activation
